# bp-pre-internship

data-science/assignment-1/data/: customers.csv
data-science/assignment-1/numpy/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
data-science/assignment-1/pandas/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
docker/assignment-1/: Dockerfile  README.md  app.js  package-lock.json  package.json
html-css/: div.html
html-css/assignment/1/: index.html
html-css/assignment/2/: index.html
html-css/assignment/3/: index.html
html-css/assignment/4/: index.html
html-css/assignment/5/: contact.html  index.html  project.html
javascript/fundamentals/conditional-branching/: index.html
node/assignment-1/: helper.js  server.js
node/assignment-2/: 1.js  2.js  3.js
node/assignment-3/: 1.js  2.js
node/assignment-4/: 1.js  2.js  3.js  package-lock.json  package.json
node/assignment-5/: app.js
python/: 1.py  10.py  101.py  102.py  105.py  106.py  108.py  109.py  11.py  111.py  112.py  113.py  114.py  115.py  116.py  117.py  118.py  119.py  12.py  120.py  121.py  122.py  123.py  124.py  13.py  14.py  15.py  16.py  161.py  17.py  176.py  18.py  19.py  2.py  20.py  21.py  212.py  22.py  23.py  24.py  (+108 more)
react/assignment-1/: index.html  package-lock.json
react/assignment-2/: index.html  package-lock.json
react/assignment-3/: index.html  package-lock.json  package.json
react/assignment-4/: index.html  package-lock.json
react/assignment-5/: index.html  package-lock.json
salesforce/Dreamhouse/: package-lock.json
(+110 files in other folders)
