[project]
name = "python"
version = "1.0.0"
description = ""
authors = [
    {name = "Aaron Mathew",email = "149572843+aaronwppe@users.noreply.github.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
